# strava-mcp

./: Dockerfile  ENDPOINT_DETAILS.md  INSTALLATION.md  LICENSE  README.md  deploys.json  openapi.yaml  pyproject.toml  requirements.txt  smithery.yaml  vercel.json
auth_scripts/: oauth_flow.py
src/strava_server/: api.py  models.py  server.py  utils.py
src/strava_server/routers/: analysis.py  api.py  insights.py
